@@ -1,5 +1,5 @@
-// Make sure all necessary classes are imported.
-// You might need to adjust the package paths if they are different in your project.
+
+
 import ast.ASTPrinter;
 import ast.ASTTranslator;
 import ast.QueryNode;
@@ -7,8 +7,8 @@ import database.ConnectionManager;
 import database.QueryExecutor;
 import model.Table;
 import model.Vector;
-import synthesizer.Enumerator;
 import synthesizer.Synthesizer;
+import synthesizer.TopDownEnumerator;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -17,45 +17,45 @@ import java.util.List;
 public class Main {
 
     public static void main(String[] args) {
-        System.out.println("--- Synthesizer End-to-End Test for Week 3 ---");
+        System.out.println("--- Synthesizer E2E Test: Top-Down Enumeration ---");
 
-        // --- Step 1: Prepare Input/Output Examples ---
-        // This data should perfectly match what's in your test database.
+        // --- Step 1: Prepare the Complex Input/Output Example ---
 
-        // 1.1 Define the input table that mirrors the 'items' table in the database.
-        List<String> inputColumnNames = Arrays.asList("id", "name", "embedding");
+        // 1.1 Define the input table with its schema.
+        List<Table.Column> inputSchema = List.of(
+                new Table.Column("id", "long"),
+                new Table.Column("name", "text"),
+                new Table.Column("embedding", "vector")
+        );
         List<List<Object>> inputRows = new ArrayList<>();
-        // Use 'L' after numbers to ensure they are of type Long for consistent comparison.
-        inputRows.add(Arrays.asList(1L, "blue-sofa", "sofa", new Vector(new float[]{0.1f, 0.2f, 0.9f})));
-        inputRows.add(Arrays.asList(2L, "red-chair", "chair", new Vector(new float[]{0.8f, 0.1f, 0.1f})));
-        inputRows.add(Arrays.asList(3L, "green-table", "table", new Vector(new float[]{0.2f, 0.9f, 0.2f})));
-        inputRows.add(Arrays.asList(4L, "red-sofa", "sofa", new Vector(new float[]{0.9f, 0.2f, 0.1f})));
-        inputRows.add(Arrays.asList(5L, "blue-chair", "chair", new Vector(new float[]{0.2f, 0.3f, 0.8f})));
-        Table inputTable = new Table("products", inputColumnNames, inputRows);
+        inputRows.add(Arrays.asList(1L, "blue-sofa", new Vector(new float[]{0.1f, 0.2f, 0.9f})));
+        inputRows.add(Arrays.asList(2L, "red-chair", new Vector(new float[]{0.8f, 0.1f, 0.1f})));
+        inputRows.add(Arrays.asList(3L, "green-table", new Vector(new float[]{0.2f, 0.9f, 0.2f})));
+        inputRows.add(Arrays.asList(4L, "red-sofa", new Vector(new float[]{0.9f, 0.2f, 0.1f})));
+        Table inputTable = new Table("items", inputSchema, inputRows);
 
 
-
-        // 1.2 The query vector remains the same.
-        Vector userQueryVector = new Vector(new float[]{1.0f, 0.0f, 0.0f});
+        Vector userQueryVector = new Vector(new float[]{0.1f, 0.2f, 0.9f});
         List<Vector> queryVectors = List.of(userQueryVector);
 
-        // 1.3 Define the new, very specific expected output.
-        // The ONLY correct answer is the single 'red-sofa'.
-        List<String> outputColumnNames = Arrays.asList("id", "name", "category", "embedding");
+        List<Table.Column> outputSchema = List.of(
+                new Table.Column("id", "long"),
+                new Table.Column("name", "text")
+        );
         List<List<Object>> outputRows = new ArrayList<>();
-        outputRows.add(Arrays.asList(4L, "red-sofa", "sofa", new Vector(new float[]{0.9f, 0.2f, 0.1f})));
-        Table outputTable = new Table("output", outputColumnNames, outputRows);
+        outputRows.add(Arrays.asList(1L, "blue-sofa"));
+        Table outputTable = new Table("output", outputSchema, outputRows);
 
 
-
-        // --- Step 2: Instantiate the Core Components ---
-        Enumerator enumerator = new Enumerator();
+        // --- Step 2: Instantiate Core Components ---
+        // We no longer need the old Enumerator.
         QueryExecutor queryExecutor = new QueryExecutor();
-        Synthesizer synthesizer = new Synthesizer(enumerator, queryExecutor);
+        // Assume you have updated the Synthesizer to use the TopDownEnumerator.
+        Synthesizer synthesizer = new Synthesizer(queryExecutor);
 
 
-        // --- Step 3: Run the Synthesis Process ---
-        System.out.println("\nStarting synthesis process...");
+        // --- Step 3: Run Synthesis ---
+        System.out.println("\nStarting top-down synthesis process...");
         List<QueryNode> solutions = synthesizer.synthesize(
                 List.of(inputTable),
                 outputTable,
@@ -63,45 +63,43 @@ public class Main {
         );
 
 
-        // --- Step 4: Verify the Results ---
+        // --- Step 4: Verify Results ---
         System.out.println("\n--- TEST VERIFICATION ---");
         if (solutions.isEmpty()) {
             System.out.println("TEST FAILED: No solutions were found.");
-            // Add a debug block to see why it failed
-            System.out.println("DEBUG: Running the target query manually to see what the database returns...");
+            // Optional: Add a debug block to manually run the target query
+            String targetSql = "SELECT id, name, category, embedding FROM products WHERE category = 'chair' ORDER BY embedding <-> '[0.1,0.2,0.9]' DESC LIMIT 2";
+            System.out.println("DEBUG: Manually executing the target SQL to compare...");
             try {
-                String targetSql = "SELECT id, name, embedding FROM items ORDER BY embedding <-> '[1.0,0.0,0.0]' ASC LIMIT 2";
                 Table actualResultFromDb = queryExecutor.executeQuery(targetSql);
                 System.out.println("--- EXPECTED OUTPUT (from Main.java) ---");
                 System.out.println(outputTable);
                 System.out.println("--- ACTUAL OUTPUT (from database) ---");
                 System.out.println(actualResultFromDb);
                 if (outputTable.equals(actualResultFromDb)) {
-                    System.out.println("DEBUG: The two tables are equal. The issue might be in the synthesizer's logic.");
+                    System.out.println("DEBUG: The tables are equal. The issue is likely in the synthesizer's search/pruning logic.");
                 } else {
-                    System.out.println("DEBUG: The two tables are NOT equal. The outputTable in Main.java is incorrect.");
+                    System.out.println("DEBUG: The tables are NOT equal. The outputTable in Main.java may be incorrect.");
                 }
             } catch (Exception e) {
-                System.out.println("DEBUG: Manual query execution failed.");
                 e.printStackTrace();
             }
-
         } else {
             System.out.println("TEST PASSED: Found " + solutions.size() + " solution(s).");
 
             QueryNode firstSolution = solutions.get(0);
-            ASTPrinter printer = new ASTPrinter(); // For pretty-printing the AST
-            ASTTranslator translator = new ASTTranslator(); // For generating executable SQL
-
-            String finalSql = firstSolution.accept(translator, null);
+            ASTTranslator translator = new ASTTranslator();
+            String finalSql = translator.translate(firstSolution);
 
             System.out.println("\n--- DETAILS OF FIRST SOLUTION ---");
-            System.out.println("Generated SQL: " + finalSql);
-            System.out.println("AST Tree:");
+            System.out.println("Generated SQL: \n" + finalSql);
+
+            ASTPrinter printer = new ASTPrinter();
+            System.out.println("\nAST Tree of the Solution:");
             System.out.println(firstSolution.accept(printer, 0));
         }
 
-        // --- Final Step: Clean up database connection ---
+        // --- Final Step: Clean up ---
         ConnectionManager.closeConnection();
         System.out.println("\nDatabase connection closed. Test finished.");
     }
